<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/libg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/listbg"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/imageViewimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/Profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_member_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text=""
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_marginTop="10dp">-->

            <!--                <Spinner-->
            <!--                    android:id="@+id/spinner"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="match_parent" />-->
            <!--            </LinearLayout>-->

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/round_background"
            android:backgroundTint="#EAF0F3"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_home_24"
                app:tint="@color/gary_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/dashboard" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ssb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/round_background"
            android:backgroundTint="#EAF0F3"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_ssb"
                app:tint="@color/gary_dark"
                ></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/ssb_account_" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/round_background"
            android:backgroundTint="#EAF0F3"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_deposit"
                app:tint="@color/gary_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/deposit_account_" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_loan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/round_background"
            android:backgroundTint="#EAF0F3"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_loan"
                app:tint="@color/gary_dark" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/loan_account_" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_group_loan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/round_background"
            android:backgroundTint="#EAF0F3"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_group_loan"
                app:tint="@color/gary_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/g_loan_account_" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="10dp"

            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"

                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_power_settings_new_24"
                app:tint="@color/gary_dark" ></ImageView>

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/logout" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>